tests/compile-fail/zero_usize.stderr
error[E0080]: evaluation of constant value failed
 --> $DIR/zero_usize.rs:8:28
  |
8 |     let _a: NonZeroUsize = nonzero!(0usize);
  |                            ^^^^^^^^^^^^^^^^ attempt to subtract with overflow
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
